--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
   },
   "homepage": "https://github.com/khilchuk-ol/films-blog#readme",
   "dependencies": {
+    "bcrypt-node": "^0.1.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.12.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1"
   }
 }
