--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "films-blog",
+  "name": "not-regular-blog",
   "version": "1.0.0",
   "description": "restful node.js application with MERN stack",
   "main": "server.js",
